fix: horizontal scrollbar issue in mobile

--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -6,7 +6,15 @@
 
 body {
   font-family: 'Lato';
+  width: 100%;
+  height: 100%;
   line-height: 1.45;
+}
+
+body,
+html {
+  margin: 0;
+  padding: 0;
   overflow-x: hidden;
 }
 
